# openapi.yaml
@@ -10,7 +10,7 @@ info:
   title: Zylitics front end api
   # This version no. is just to showing in the console and has no affect on functionality, although it should be
   # updated whenever production version is updated.
-  version: 0.3.20
+  version: 0.3.21
 host: front.api.zylitics.io
 x-google-endpoints:
   - name: front.api.zylitics.io
@@ -1310,6 +1310,19 @@ paths:
       responses:
         200:
           description: OK
+        default:
+          description: Unexpected exception
+          schema:
+            $ref: '#/definitions/ApiError'
+  /users/current/getApiKey:
+    get:
+      description: get currently logged-in user's api key
+      operationId: getApiKey
+      responses:
+        200:
+          description: The currently logged-in user's api key
+          schema:
+            type: string
         default:
           description: Unexpected exception
           schema:
